# rattler

crates/rattler_jni/: Cargo.toml  settings.gradle  test.sh
crates/rattler_jni/java/: Rattler.h  Rattler.java
crates/rattler_jni/java/src/org/mamba/rattler/: Rattler.java
crates/rattler_jni/lib/: build.gradle
crates/rattler_jni/lib/src/main/java/org/mamba/rattler/: CreateOpts.java  Rattler.java  org_mamba_rattler_Rattler.h
crates/rattler_jni/lib/src/main/java/rattler_jni/: Library.java
crates/rattler_jni/lib/src/test/java/rattler_jni/: LibraryTest.java
crates/rattler_jni/src/: lib.rs
