[package]
name = "rattler_jni"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
rattler = { version = "0.16.2", path = "../rattler", default-features = false }

[lib]
crate_type = ["cdylib"]
